# agent-bus

./: .gitignore  AGENTS.md  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
contracts/: README.md  event-types.json
contracts/fixtures/: agent.option.selected.json  agent.session.updated.json  hermes.request.failed.json  hermes.request.started.json  hermes.response.completed.json  voice.ptt.cancel.json  voice.ptt.start.json  voice.ptt.stop.json  voice.recording.cancelled.json  voice.recording.started.json  voice.recording.stopped.json  voice.transcription.completed.json  voice.transcription.empty.json  voice.tts.completed.json  voice.tts.failed.json  voice.tts.speak.json  voice.tts.started.json
contracts/schemas/: agent.option.selected.json  agent.session.updated.json  hermes.request.started.json  hermes.response.completed.json  voice.ptt.stop.json  voice.recording.cancelled.json  voice.recording.started.json  voice.recording.stopped.json  voice.transcription.completed.json  voice.transcription.empty.json  voice.tts.failed.json  voice.tts.speak.json
src/agent_bus/: __init__.py  app.py  backend.py  cli.py  config.py  contracts.py  models.py
tests/: test_app.py  test_contracts.py
