[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-bus"
version = "0.1.0"
description = "Local durable event bus for Launchpad, voice gateway, and Hermes companion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.0",
  "redis>=5.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
agent-bus = "agent_bus.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_bus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
